--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,8 +34,8 @@ jobs:
           bazelisk-cache: true
           disk-cache: true
           repository-cache: true
-      # - run: yarn install
-      # - run: yarn build
+      - run: yarn install
+      - run: yarn build
   # build-windows:
   #   runs-on: windows-latest
   #   steps:
