--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
           bazelisk-cache: true
           disk-cache: true
           repository-cache: true
+          cache-version: 2
       - run: yarn install
       - run: yarn build
   build-ubuntu-cache:
