--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ permissions:
 
 jobs:
   test:
-    runs-on: blacksmith-staging
+    runs-on: blacksmith
     steps:
       - uses: actions/checkout@v4
         with:
@@ -20,7 +20,7 @@ jobs:
       - run: yarn lint
       - run: yarn test
   build-ubuntu:
-    runs-on: blacksmith-staging
+    runs-on: blacksmith
     steps:
       - uses: actions/checkout@v4
         with:
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version-file: '.node-version'
           cache: yarn
-      - uses: useblacksmith/setup-bazel@sd-integration
+      - uses: useblacksmith/setup-bazel@v2
         with:
           bazelisk-cache: true
           disk-cache: true
@@ -38,7 +38,7 @@ jobs:
       - run: yarn install
       - run: yarn build
   build-ubuntu-cache:
-    runs-on: blacksmith-staging
+    runs-on: blacksmith
     steps:
       - uses: actions/checkout@v4
         with:
