--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,25 +35,27 @@ jobs:
           disk-cache: true
           repository-cache: true
           cache-version: 2
-      - run: yarn install
-      - run: yarn build
-  build-ubuntu-cache:
-    runs-on: blacksmith
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: true
-      - uses: actions/setup-node@v4
-        with:
-          node-version-file: '.node-version'
-          cache: yarn
-      - uses: useblacksmith/setup-bazel@v1
-        with:
-          bazelisk-cache: true
-          disk-cache: true
-          repository-cache: true
-      - run: yarn install
-      - run: yarn build
+      - name: Create bazel cache directory
+        run: mkdir -p /home/runner/.cache/bazel/_bazel_runner
+  #     - run: yarn install
+  #     - run: yarn build
+  # build-ubuntu-cache:
+  #   runs-on: blacksmith
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #       with:
+  #         submodules: true
+  #     - uses: actions/setup-node@v4
+  #       with:
+  #         node-version-file: '.node-version'
+  #         cache: yarn
+  #     - uses: useblacksmith/setup-bazel@v1
+  #       with:
+  #         bazelisk-cache: true
+  #         disk-cache: true
+  #         repository-cache: true
+  #     - run: yarn install
+  #     - run: yarn build
   # build-windows:
   #   runs-on: windows-latest
   #   steps:
