--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
         with:
           node-version-file: '.node-version'
           cache: yarn
-      - uses: useblacksmith/setup-bazel@v1
+      - uses: bazel-contrib/setup-bazel@0.9.1
         with:
           bazelisk-cache: true
           disk-cache: true
