--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,12 +34,12 @@ jobs:
           bazelisk-cache: true
           disk-cache: true
           repository-cache: true
-          cache-version: 3
+          cache-version: 4
 
-      - name: Create bazel cache directory
-        run: ls -al ~/.cache
-      - run: yarn install
-      - run: yarn build
+      # - name: Create bazel cache directory
+      #   run: ls -al ~/.cache
+      # - run: yarn install
+      # - run: yarn build
   # build-windows:
   #   runs-on: windows-latest
   #   steps:
