--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,15 +29,15 @@ jobs:
         with:
           node-version-file: '.node-version'
           cache: yarn
-      - uses: useblacksmith/setup-bazel@v2
+      - uses: useblacksmith/setup-bazel@mount-sd
         with:
           bazelisk-cache: true
           disk-cache: true
           repository-cache: true
           cache-version: 4
 
-      # - name: Create bazel cache directory
-      #   run: ls -al ~/.cache
+      - name: Create bazel cache directory
+        run: ls -al ~/.cache
       # - run: yarn install
       # - run: yarn build
   # build-windows:
